vote/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a1501ee3b36d8462f942152f5be2dcad-1137844548.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
      - path: /voting
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: voting-service
            port:
              number: 80
